tests/positive/pr115_multiline_return.safe
package pr115_multiline_return

   subtype counter is integer (0 to 10);

   function identity (input : counter) returns counter

      return
         input;

