tests/negative/neg_pr1113a_constructor_name_collision.safe
package neg_pr1113a_constructor_name_collision

   function circle returns integer
      return 1

   type shape is circle (radius : integer) or idle
